# fem

./: .gitignore  .gitmodules  MIGRATION_GUIDE.md  README.md  REFACTOR_PLAN.md  build_docs.sh  environment.yml  fem_hypergraph_results.csv  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
FEM/: drawer.py  interface.py  placement.py  placement_simplified.py  problem.py  router.py  solver_fem.py  test_fpga_placement.py  timer.py  utils.py
FEM/customized_problem/: fpga_placement.py  hyper_bmincut.py  hypermincut.py
FEM/ml_alpha/: alpha_model.pkl  dataset.py  (+1 more)
docs/: ALGORITHM.md  API_REFERENCE.md  CODE_EXPLAINED.md  MIGRATION_GUIDE.md  USER_GUIDE.md  index.md  installation.md  quickstart.md  testing.md
examples/: build_in.ipynb  customize.ipynb  manipulated_gradients.ipynb
fem_placer/: README.md  TUTORIAL.md  __init__.py  config.py  drawer.py  grid.py  hollow_grid.py  hpwl.py  hyper_bmincut.py  instance.py  legalizer.py  logger.py  net.py  net_manager.py  objectives.py  optimizer.py  placer.py  router.py  solver_sb.py  timer.py  utils.py
fpga_placement/: README.md  __init__.py  legalizer.py  objectives.py
ml/: alpha_model.pkl  dataset.py  ml_data.csv  model.py  predict.py  train.py
ml_alpha/: dataset.py  ml_data.csv  model.py  predict.py  train.py
result/: kahypar_results.csv
scripts/: gen_boundary_wrapper.py  gen_test_instances.py  generate_test_instances.py  qubo_utils.py  test_cyclic_expansion.py  test_cyclic_expansion_no_vivado.py  test_cyclicexpansion.py  test_dsb.py  test_dsb_no_vivado.py  test_dsb_tune.py  test_dsb_tune_no_vivado.py  test_fem.py  test_master_branch.py  test_refactor_branch_qubo.py  test_refactor_branch_sb.py  test_sb_qubo_export.py  utils.py
tcl/: iscas.synth.tcl  ispd.synth.tcl  place_boundary_io.tcl  run_boundary_verify.tcl  run_boundary_verify_dcp.tcl  vivado.synth.tcl  vtr.synth.tcl
tests/: clean.py  extract_placer_info.py  hyper_bmincut.py  hyper_bmincut_multiproc.py  placement_eval_logic.py  plot_mode_anneal_results.py  predict_alpha.py  test_annealing_comparison.py  test_bmincut.py  test_customize.py  test_extract_placer_info.py  test_fpga_placement.py  test_fpga_placement_refactored.py  test_hpwl_speed.py  test_hyper_bmincut.py  test_hyper_bmincut_unit.py  test_kahypar.py  test_ml_alpha.py  test_ml_prediction_comparison.py  test_objectives.py  test_place_no_vivado.py  test_sb_solver.py  test_solver.py  test_timer.py  test_train_alpha.py  test_train_alpha_logic_io.py  test_train_io_factor.py  utils.py
(+22 files in other folders)
